CAD-81 adding meta tags and analytics

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,25 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="We provide a crowdsourced Directory of resources for people impacted by the Australian bushfire.">
+    <meta property="og:title" content="Crisis App">
+    <meta property="og:description" content="We provide a crowdsourced Directory of resources for people impacted by the Australian bushfire.">
+    <meta property="og:image" content="<%= BASE_URL %>images/logo.png">
+    <meta name="twitter:title" content="Crisis App">
+    <meta name="twitter:description" content="We provide a crowdsourced Directory of resources for people impacted by the Australian bushfire.">
+    <meta name="twitter:image" content="<%= BASE_URL %>images/logo.png">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Crisis App</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1NY7GW6317"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1NY7GW6317');
+    </script>
   </head>
   <body>
     <noscript>
