--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Crisis App</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1NY7GW6317"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156077638-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-1NY7GW6317');
+      gtag('config', 'UA-156077638-1');
     </script>
   </head>
   <body>
